# AI-Based-Health-Monitoring-System

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  app.py  pyproject.toml  requirements.txt
Dataset/: .gitignore  angiography.zip.dvc
Models_Testing/: testing_cancer.py  testing_data.py  testing_stenosis.py
saved_models/: le_ChestPainType.joblib  le_RestingECG.joblib  le_ST_Slope.joblib  lgbm_model.joblib  scaler.joblib
static/css/: Dashboard.css  details.css  login.css  patients.css  settings.css
templates/: Dashboard.html  classificationpred.html  detail.html  login.html  oncology_analysis.html  patients.html  reports.html  settings.html
