[project]
authors = [{ name = "likith kumar", email = "kumarlikith178@gmail.com" }]
name = "heart-failure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.61.0",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "lightgbm>=4.6.0",
    "pydicom>=3.0.1",
    "scikit-learn>=1.7.0",
    "ultralytics>=8.3.167",
]
